EGR 170, EGR 323, homework hand-back dates updated

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/31/2018 12:28 pm)
+                              >(Last update: 2/05/2018 7:34 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -141,7 +141,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>2/02</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+        "https://dordt.instructure.com/files/142528436/download?download_frd=1"
+        >sol'n</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Input, output, scope, if, switch      <br>&nbsp;
 		Read:  Attaway, Chapters 3, 4                  <br>&nbsp;
