Errata Sedra Smith 7e answer to problem 8.90

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 1/25/2019)<br> 
+                    (last update 2/05/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -643,6 +643,13 @@ Appendix L, Page L-9, Answer to Problem 8.1.</b><br>
    7.0 k&Omega;; 0.2 V;&nbsp; 25 k&Omega;; 20 &mu;A<br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 2/11/2017)</small></i><br><br>
+      
+                                           <A NAME="L9_8P1"></A><b>
+Appendix L, Page L-11, Answer to Problem 8.90 Part (b).</b><br>
+   The &quot;0.7 &mu;A&quot; answer given is wrong.<br>
+   The correct answer is 0.61 &mu;A.<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 2/05/2019)</small></i><br><br>
       
 <!--                                           <A NAME="A1_9"></A><b>
 Page I-1, Answer to Problem 1.9.</b><br>
