EGR 323 link errata

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -127,7 +127,10 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		Note <a href=
 		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P588"
-		>errata on Problem 8.78</a>.
+		>errata on Problem 8.78</a>.                   <br>&nbsp;
+		Note errata on <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#L11_8P90"
+		>the answer to Problem 8.90</a>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  2
