--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -130,14 +130,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/142447388/download?download_frd=1"><!-- -->
-	  2/04<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/06<!-- --</a><!-- --><br><!-- --<a href=
+	  2/04<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/142588775/download?download_frd=1"><!-- -->
+      2/06<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/08<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Thev model of diff source&noise, bias & acceptabe common-mode noise<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Large signal analysis of MOSFET diff. pair<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
