--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/05/2018 7:34 pm)
+                              >(Last update: 2/07/2018 1:34 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -87,6 +87,35 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 4
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/07
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575939"
+		>2/14</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics:  Text manipulation: character arrays and<br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+				 strings; Data structures              <br>&nbsp;
+		Read:  Attaway, Chapters 7, 8                  <br>&nbsp;
+		                                               <br>&nbsp;
+		Do homework in <D4>Attaway 4th ed.             <br>&nbsp;
+		    7.26, <!-- decipher -->
+			7.29, <!-- different variables -->
+			7.35, <!-- convert strings to nums & plot --> 
+			8.5,  <!-- word salad using cell arrays -->
+			8.13, <!-- struct function -->
+			8.25  <!-- valid struct statements --> 
+			</D4><br>&nbsp;
+			                                           <br>&nbsp;
+		Help on Problem 7.35 avalable <a href="Help_on_Problem_7_35.pdf">here</a>  
+<!-- - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  3
 
