--- a/S19/170/170_02_S19_DN.HTM
+++ b/S19/170/170_02_S19_DN.HTM
@@ -132,14 +132,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">&nbsp;<br>Th<br>&nbsp;</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  &nbsp;<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/07<!-- --</a><!-- --><br><!-- --<a href=
+	  &nbsp;<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/142640868/download?download_frd=1"><!-- -->
+      2/07<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       &nbsp;<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Text: char vectors vs. strings, Data structures: cell arrays vs. structs<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">&nbsp;<br>Th<br>&nbsp;</td>
