Published a hint for EGR 170 PS#4 Problem 8.25

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/07/2018 4:51 pm)
+                              >(Last update: 2/09/2018 5:20 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -114,7 +114,8 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			8.25  <!-- valid struct statements --> 
 			</D4><br>&nbsp;
 			                                           <br>&nbsp;
-		Help on Problem 7.35 avalable <a href="Help_on_Problem_7_35.pdf">here</a>  
+		Help on Problem 7.35 avalable <a href="Help_on_Problem_7_35.pdf">here</a>.                                       <br>&nbsp;
+        A helpful script for Problem 8.25 is <a href="attaway_4th_stmt_8_25.m">here</a>.		
 <!-- - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  3
