EGR 323 slides from Friday and Monday

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -132,24 +132,24 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/142447388/download?download_frd=1"><!-- -->
 	  2/04<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/142588775/download?download_frd=1"><!-- -->
-      2/06<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/08<!-- --</a><!-- --></td>
+      2/06<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/142837952/download?download_frd=1"><!-- -->
+      2/08<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Thev model of diff source&noise, bias & acceptabe common-mode noise<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Large signal analysis of MOSFET diff. pair<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->MOSFET diff. pair, diffential gain and CMRR<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  2/11<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/142838357/download?download_frd=1"><!-- -->
+	  2/11<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/13<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/15<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->MOSFET CMRR, input voltage offset, BJT input bias & offset<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Reading day, no class</font><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
