--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/09/2018 5:20 pm)
+                              >(Last update: 2/12/2018 5:00 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -128,7 +128,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>2/07</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+        "https://dordt.instructure.com/files/142874692/download?download_frd=1"
+        >sol'n</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Program flow control (for, while, etc.)<br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
@@ -173,7 +175,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
         "https://dordt.instructure.com/files/142528436/download?download_frd=1"
-        >sol'n</a>
+        >2/07</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Input, output, scope, if, switch      <br>&nbsp;
 		Read:  Attaway, Chapters 3, 4                  <br>&nbsp;
