--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/09/2019 6:51 pm)
+                              >(Last update: 2/14/2019 5:20 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -90,7 +90,7 @@ PS                                                           <BR>
         2/11
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/18
+        2/22
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!-- <a href=
@@ -100,7 +100,10 @@ PS                                                           <BR>
         Topics: 2nd order effects, DC offset, active load<br>&nbsp; 
 		Read 9.4, 9.5                                  <br>&nbsp;
 		                                               <br>&nbsp;
-		<DO>Do +9.55, +9.61, +D9.72, +9.87</DO>
+		<DO>Do +9.55, +9.61, +D9.72, +9.87</DO>        <br>&nbsp;
+		                                               <br>&nbsp;<small>
+		(As per discussion in class on Wednesday, 2/13, this<br>&nbsp;
+		assignment's due date was changed from 2/18 to 2/22.)</small>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  4
@@ -133,9 +136,9 @@ PS                                                           <BR>
         2/01
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		2/06<br><br><small>(bad<br>weather<br>delay)</small><!-- <a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br> -->
+		<a href=
+        "https://dordt.instructure.com/files/142979753/download?download_frd=1"
+        >2/06</a><br><br><small>(bad<br>weather<br>delay)</small
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Cascode, double cascode, folded        <br>&nbsp; 
 		                              &nbsp; &nbsp; &nbsp; &nbsp;
