--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/14/2019 12:35 pm)
+                              >(Last update: 2/14/2019 9:09 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -86,6 +86,41 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 5
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/14
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575943"
+		>2/21</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics:  High- and low-level I/O.  object-     <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+				 oriented programming, version control.<br>&nbsp;
+		Read:  Attaway, Chapters 9, 11, classroom slides<br>&nbsp;
+		                                               <br>&nbsp;
+		Do homework in <D4>Attaway 4th ed.             <br>&nbsp;
+		     9.3, <!-- read from spreadsheet, plot -->
+			 9.9, <!-- errorcheck fopen -->
+			9.23, <!-- load vs. textscan -->
+			11.2, <!-- plot methods to control color -->
+			11.3, <!-- bar chart methods to control color --> 
+			</D4><br>&nbsp;
+			                                           <br>&nbsp;
+		No need to spend time making files.            <br>&nbsp;
+		Spreadsheet for 9.3 can be downloaded <a href="attaway4th9p3.xls" download>here</a><br>&nbsp;
+		File for 9.23 can be downloaded <a href="stringsfile.dat" download>here</a></br>&nbsp;
+		In most browsers, after clicking the links above<br>&nbsp;
+        choose "Save File".  In some browsers,      <br>&nbsp;
+		right-click the link, then choose "Save link as".<br>&nbsp;
+		Still other browsers offer other choices that    <br>&nbsp;
+		work such as, "Save target".
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  4
