--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/14/2019 9:09 pm)
+                              >(Last update: 2/15/2019 11:36 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -133,7 +133,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>2/14</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        <a href=
+        "https://dordt.instructure.com/files/143074996/download?download_frd=1"
+        >sol'n</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Text manipulation: character arrays and<br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
