EGR 170 modified PS#5, problem 11.2--shortend to use only the set method

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -34,6 +34,10 @@ D4 {
    color: #8A8A0F; /* olive green */
    text-decoration: none;
    }
+CN {
+   font-family: "courier new";
+   text-decoration: none
+   }
 -->
 </style>
 </head>
@@ -59,7 +63,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/15/2019 11:36 pm)
+                              >(Last update: 2/19/2019 10:39 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -109,9 +113,10 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		     9.3, <!-- read from spreadsheet, plot -->
 			 9.9, <!-- errorcheck fopen -->
 			9.23, <!-- load vs. textscan -->
-			11.2, <!-- plot methods to control color -->
+			11.2  <CN><b>set</b></CN> only, <!-- plot methods to control color -->
 			11.3, <!-- bar chart methods to control color --> 
 			</D4><br>&nbsp;
+		Help on Problem 7.35 avalable <a href="Help_on_Problem_11_2.pdf">here</a>.<br>&nbsp;
 			                                           <br>&nbsp;
 		No need to spend time making files.            <br>&nbsp;
 		Spreadsheet for 9.3 can be downloaded <a href="attaway4th9p3.xls" download>here</a><br>&nbsp;
@@ -151,7 +156,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			8.25  <!-- valid struct statements --> 
 			</D4><br>&nbsp;
 			                                           <br>&nbsp;
-		Help on Problem 7.35 avalable <a href="Help_on_Problem_7_35.pdf">here</a>.                                       <br>&nbsp;
+		Help on Problem 7.35 avalable <a href="Help_on_Problem_7_35.pdf">here</a>.<br>&nbsp;
         A helpful script for Problem 8.25 is <a href="attaway_4th_stmt_8_25.m">here</a>.		
 <!-- - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
