--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -139,7 +139,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Thev model of diff source&noise, bias & acceptabe common-mode noise<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Large signal analysis of MOSFET diff. pair<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->MOSFET diff. pair, diffential gain and CMRR<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 2/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/142838357/download?download_frd=1"><!-- -->
@@ -152,18 +152,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->MOSFET CMRR, input voltage offset, BJT input bias & offset<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Diff pair with current mirror load: <i>A<sub>d</sub></i>, CMRR, systematic offset voltage<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Reading day, no class</font><!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 2/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  2/18<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/20<!-- --</a><!-- --><br><!-- --<a href=
+	  2/18<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/143295272/download?download_frd=1"><!-- -->
+      2/20<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/22<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>President's day, Prof. <span style="font-family:Garamond"><big>d</big><small>DB</small></span> elected to have no class</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><b>Ch 10</b> Introduction, Def'n Bode plot etc., sinusoidal ss analysis via diff eq<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
