EGR 170 PS#6 published and spring break noted on daily slide index

--- a/S19/170/170_02_S19_DN.HTM
+++ b/S19/170/170_02_S19_DN.HTM
@@ -204,7 +204,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       &nbsp;<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Spring break, no class</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">&nbsp;<br>Th<br>&nbsp;</td>
