--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -63,7 +63,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/19/2019 10:39 am)
+                              >(Last update: 2/21/2019 12:25 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -90,6 +90,48 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 6
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/21
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575943"
+		>3/07</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics:  Images, GUIs, built-in math functions <br>&nbsp;
+		Read:  Attaway, Chapters 13, 14                <br>&nbsp;
+		                                               <br>&nbsp;
+		Do homework in <D4>Attaway 4th ed.             <br>&nbsp;
+		    13.3,  <!-- paletized image -->
+			13.4,  <!-- RGB image -->
+			13.12, <!-- Process an image -->
+			13.14, <!-- GUI text box -->
+			13.19, <!-- GUI slider, wind chill factor --><br>&nbsp; 
+			14.14, <!-- Roots of a polynomial --> 
+			14.23, <!-- complex numbers --> 
+			14.24  <!-- polynomial with complex coef, roots --> 
+			</D4>                                      <br>&nbsp;
+			                                           <br>&nbsp;
+			Note: Prof. dDB recommends MATLAB for problems <br>&nbsp;
+			in Chapter 13.  GNU Octave starts showing incom-<br>&nbsp;
+			patibility with MATLAB when advanced features  <br>&nbsp;
+			such as high-level I/O and GUI uicontrol are used.<br>&nbsp;
+			But. . .  If you really try hard, GNU Octve can <br>&nbsp;
+            do these tasks.  Keep these things in mind:<br>&nbsp;
+			&bull; Octave does not support nested functions.  <br>&nbsp;
+			&bull; Octave does not fully support local functions.<br>&nbsp;
+			&nbsp;&nbsp;&nbsp;Put functions in their own files instead.<br>&nbsp;
+			&bull; Octave does not fully support the dot method.<br>&nbsp;
+			&nbsp;&nbsp;&nbsp;Use <CN>get</CN> and <CN>set</CN> instead.<br>&nbsp;
+			&bull; You may need to load packages.<br>&nbsp;
+			Yeh. . .  It's easier just to follow the high-<br>&nbsp;
+			level methods in Attaway's text using MATLAB.            			
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
