Fixed broken link

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -63,7 +63,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/21/2019 12:25 am)
+                              >(Last update: 2/22/2019 12:40 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -98,7 +98,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
         2/21
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575943"
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575946"
 		>3/07</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
@@ -131,7 +131,11 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			&nbsp;&nbsp;&nbsp;Use <CN>get</CN> and <CN>set</CN> instead.<br>&nbsp;
 			&bull; You may need to load packages.<br>&nbsp;
 			Yeh. . .  It's easier just to follow the high-<br>&nbsp;
-			level methods in Attaway's text using MATLAB.            			
+			level methods in Attaway's text using MATLAB.<br>&nbsp;
+                                                         <br>&nbsp;
+            Note:  You have two weeks to do this assignment<br>&nbsp;
+			because it will take a while. &nbsp; Suggestion:   <br>&nbsp;
+			Get <D4>13.3, 13.4, 13.12</D4> and <D4>13.14</D4> done by 2/28.
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
