EGR 323 daily & PS#6

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -158,13 +158,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  2/18<!-- --</a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/143295272/download?download_frd=1"><!-- -->
-      2/20<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/22<!-- --</a><!-- --></td>
+      2/20<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/143425769/download?download_frd=1"><!-- -->
+      2/22<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>President's day, Prof. <span style="font-family:Garamond"><big>d</big><small>DB</small></span> elected to have no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Ch 10</b> Introduction, Def'n Bode plot etc., sinusoidal ss analysis via diff eq<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Remainder of DE solution, phasor exmaple and tranfer fnctn, Bode himself<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
