--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/14/2019 5:20 pm)
+                              >(Last update: 2/22/2019 6:39 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,29 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 6
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/22
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        3/01
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Sinusoidal steady-state analysis a.k.a.<br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				s-Domain, transfer function, bode plots<br>&nbsp;
+		Read <a href =
+		"http://global.oup.com/us/companion.websites/9780199339136/student/app/app_f"
+		>Appendix F</a>                                <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do F.5</DO> (Find it near the end of Appendix F)
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
