EGR 170 PS#5 solutions

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -63,7 +63,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/22/2019 12:40 am)
+                              >(Last update: 2/23/2019 17:24 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -118,7 +118,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			14.24  <!-- polynomial with complex coef, roots --> 
 			</D4>                                      <br>&nbsp;
 			                                           <br>&nbsp;
-			Note: Prof. dDB recommends MATLAB for problems <br>&nbsp;
+			Note: Prof. <span style="font-family:Garamond; 
+			font-size:120%">d</span><span style="font-family:Garamond; 
+			font-size:80%">DB</span> recommends MATLAB for problems <br>&nbsp;
 			in Chapter 13.  GNU Octave starts showing incom-<br>&nbsp;
 			patibility with MATLAB when advanced features  <br>&nbsp;
 			such as high-level I/O and GUI uicontrol are used.<br>&nbsp;
@@ -148,6 +150,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>2/21</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
+        <a href=
+        "https://dordt.instructure.com/files/143449663/download?download_frd=1"
+        >sol'n</a>
         &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  High- and low-level I/O.  object-     <br>&nbsp;
@@ -162,7 +167,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			11.2  <CN><b>set</b></CN> only, <!-- plot methods to control color -->
 			11.3, <!-- bar chart methods to control color --> 
 			</D4><br>&nbsp;
-		Help on Problem 7.35 avalable <a href="Help_on_Problem_11_2.pdf">here</a>.<br>&nbsp;
+		Help on Problem 11.2 avalable <a href="Help_on_Problem_11_2.pdf">here</a>.<br>&nbsp;
 			                                           <br>&nbsp;
 		No need to spend time making files.            <br>&nbsp;
 		Spreadsheet for 9.3 can be downloaded <a href="attaway4th9p3.xls" download>here</a><br>&nbsp;
