--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/22/2019 6:39 pm)
+                              >(Last update: 2/26/2019 11:03 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -116,9 +116,9 @@ PS                                                           <BR>
         2/22
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br> -->
+		<a href=
+        "https://dordt.instructure.com/files/143570948/download?download_frd=1"
+        >2/26</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: 2nd order effects, DC offset, active load<br>&nbsp; 
 		Read 9.4, 9.5                                  <br>&nbsp;
@@ -138,9 +138,9 @@ PS                                                           <BR>
         2/08
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br> -->
+		<a href=
+        "https://dordt.instructure.com/files/143570925/download?download_frd=1"
+        >2/13</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Differential amp:  bias, large- and small-<br>&nbsp; 
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
