--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/26/2019 11:03 am)
+                              >(Last update: 3/01/2019 10:23 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,34 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/01
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        3/08
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Sinusoidal steady-state analysis a.k.a.<br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				s-Domain, transfer function, bode plots,<br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				low-frequency response of amplfiers    <br>&nbsp;
+		Read <a href =
+		"http://global.oup.com/us/companion.websites/9780199339136/student/app/app_f"
+		>Appendix F</a>, Section 10.1                  <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do F.1, F.4, F.9, also plot the phase of   <br>&nbsp;
+		the transfer function of F.9. </DO> (Find these <br>&nbsp;
+		Problems near the end of Appendix F) Also do   <br>&nbsp;
+		<DO>+10.1, 10.2, +10.3</DO>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  6
