--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -170,14 +170,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/143616421/download?download_frd=1"><!-- -->
 	  2/25<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      2/27<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/01<!-- --</a><!-- --></td>
+      "https://dordt.instructure.com/files/143767577/download?download_frd=1"><!-- -->
+      2/27<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/143775858/download?download_frd=1"><!-- -->
+      3/01<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Bode plots:  how to plot constants, poles and  zeros w/ negative real parts.<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Test #1</b><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Bode plots:  poles and zeros at zero, complex conjugate poles and zeros.<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
