Errata, Sedra Smith 7, page 707.  Also update slides for EGR 323

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 2/05/2019)<br> 
+                    (last update 3/06/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -428,7 +428,27 @@ Page 588, Problem 8.78.</b><br>
    In the equation for <i>A<sub>v</sub></i> change the "equals" 
    sign (=) to an "approximately equal" (&#8776) sign. 
    &nbsp; &nbsp; &nbsp; &nbsp; 
-   <i><small>(Posted 8/17/2016)</small></i><br>
+   <i><small>(Posted 8/17/2016)</small></i><br><br>
+   
+                                           <A NAME="P707"></A><b>
+Page 707, Equation 10.13.</b><br>
+   There is a problem with units.  The reciprocal of an <i>RC</i>
+   time constant yields units of radians/second.  The variable 
+   <i>f</i> implies the units of Hertz. <br>
+   Equation 10.13 should either be<br> &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+   <img src="S_S_7_EQ10_13a.png"><br> 
+   or <br> &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+   <img src="S_S_7_EQ10_13b.png"><br>                &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+   <i><small>(Posted 3/06/2019)</small></i><br><br>
    
 <!-- Can't find this in the 7th            <A NAME="P668"></A><b>
 Page 668, Problem 8.11.</b><br>
@@ -493,7 +513,7 @@ Page 794, Problem *9.76.</b><br>
    alt="beta"> = &infin;, <i>C<sub>&#960;</sub></i> = 
    14 pF, . . ."                                              -->
    
-                                   <br><BR><A NAME="P817"></A><b>
+                                            <A NAME="P817"></A><b>
 Pages 817 and 818, Bottom half of the page</b><br>
    The discussion of signal-to-interference ratio presented (as 
    printed) is in terms of a voltage ratio.  This is not a common 
