EGR 323 Daily Slides

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -182,14 +182,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/143957189/download?download_frd=1"><!-- -->
-	  3/04<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/06<!-- --</a><!-- --><br><!-- --<a href=
+	  3/04<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/144022933/download?download_frd=1"><!-- -->
+      3/06<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       3/08<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Bode plots:  Q and Bandwidth;  Low frequency response of CS amplifier<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Probs F.1, F.4; LF response of CS amp (cont'd), <i>f<sub>L</sub></i> est. from dominant pole <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
