--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -92,6 +92,25 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
     Assignment                                       </b></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ ---
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/28
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        3/20<br>at<br>5:00 pm
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        ---
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		<b>Finish Project #1</b>, Robot Arm or Color Sorter<br>&nbsp;
+		<a href=
+		"https://dordt.instructure.com/courses/2481201/pages/egr-170#P1"
+		>Details</a> are on the course's Canvas page.       <br>&nbsp;
+		Links for turning in your deliverables are     <br>&nbsp;
+		also on the course's Canvas page.
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  6
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
