Posted solutions EGR 170 PS#6

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -63,7 +63,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/07/2019 1:19 pm)
+                              >(Last update: 3/07/2019 1:39 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -121,6 +121,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>3/07</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
+        <a href=
+        "https://dordt.instructure.com/files/144050808/download?download_frd=1"
+        >sol'n</a>
         &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Images, GUIs, built-in math functions <br>&nbsp;
@@ -210,7 +213,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
         "https://dordt.instructure.com/files/143074996/download?download_frd=1"
-        >sol'n</a>
+        >2/28</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  Text manipulation: character arrays and<br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
