--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/01/2019 10:23 am)
+                              >(Last update: 3/08/2019 1:09 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,31 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/08
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        3/22
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: High-frequency models of a MOSFET      <br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				Review Bode plots                      <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				low-frequency response of amplfiers    <br>&nbsp;
+		Read 10.2, Review <a href =
+		"http://global.oup.com/us/companion.websites/9780199339136/student/app/app_f"
+		>Appendix F</a>                                <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do F.6, F.10, F.9, 10.14, 10.15</DO>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  7
@@ -121,7 +146,7 @@ PS                                                           <BR>
         3/01
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
+		3/04<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
