Posted new errata, Sedra & Smith 7e, especially answer to a problem in chapter 10

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 3/06/2019)<br> 
+                    (last update 3/16/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -430,6 +430,16 @@ Page 588, Problem 8.78.</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 8/17/2016)</small></i><br><br>
    
+                                           <A NAME="P632"></A><b>
+Pages 632, 633, Example 9.4.</b><br>
+   There is no errata in the textbook on these pages, but. . .<br>
+   The publisher's errata on these pages is itself errata.<br>
+   Ignore the publisher's erratta on pages 632 and 633.<br>
+   Here is a <a href="S_S_7_errata_P632ff.pdf"
+   >more complete version of Example 9.4</a>.     
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 3/16/2019)</small></i><br><br>
+   
                                            <A NAME="P707"></A><b>
 Page 707, Equation 10.13.</b><br>
    There is a problem with units.  The reciprocal of an <i>RC</i>
@@ -670,6 +680,13 @@ Appendix L, Page L-11, Answer to Problem 8.90 Part (b).</b><br>
    The correct answer is 0.61 &mu;A.<br>
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 2/05/2019)</small></i><br><br>
+      
+                                           <A NAME="L13_10P3"></A><b>
+Appendix L, Page L-13, Answers to Problem 10.3.</b><br>
+   The answers given are wrong.<br>
+   The correct answers are 9 &mu;F, 98.2 Hz, 9.82 Hz.<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 3/12/2019)</small></i><br><br>
       
 <!--                                           <A NAME="A1_9"></A><b>
 Page I-1, Answer to Problem 1.9.</b><br>
