--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/08/2019 1:12 pm)
+                              >(Last update: 3/16/2019 6:48 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -134,7 +134,15 @@ PS                                                           <BR>
 		<DO>Do F.1, F.4, F.9, also plot the phase of   <br>&nbsp;
 		the transfer function of F.9. </DO> (Find these <br>&nbsp;
 		Problems near the end of Appendix F) Also do   <br>&nbsp;
-		<DO>+10.1, 10.2, +10.3</DO>.
+		<DO>+10.1, 10.2, +10.3</DO>.                   <br>&nbsp;
+		                                               <br>&nbsp;
+		Note errata on pages 697, 705, 707, 710 (two   <br>&nbsp;
+		on page 710) as described <a href = 
+		"http://global.oup.com/us/companion.websites/fdscontent/uscompanion/us/static/companion.websites/9780199339136/Errata/Microelectronic-Circuits-7e-Errata.pdf"
+		>here</a>, and also note                       <br>&nbsp;
+		errata to the <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#L13_10P3"
+		>answer to 10.3</a>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  6
