--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/16/2019 6:48 pm)
+                              >(Last update: 3/16/2019 7:03 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -142,7 +142,11 @@ PS                                                           <BR>
 		>here</a>, and also note                       <br>&nbsp;
 		errata to the <a href=
 		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#L13_10P3"
-		>answer to 10.3</a>.
+		>answer to 10.3</a>.                           <br>&nbsp;
+		Ignore the publisher's errata regarding pages  <br>&nbsp;
+		632 and 633.  Details <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P632"
+		>here</a>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  6
