Fixed a typo in EGR 170 PS#7

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -116,7 +116,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		Do homework in <DO>Essick 4th ed.             <br>&nbsp;
 		    1.1,  <!-- Integer detector -->
 			1.3 (optional:  label the output "R1||R2" <br>&nbsp;
-			instead of "Equivalent Resistance."<!-- Foozlebang calculator -->
+			instead of "Equivalent Resistance."),<!-- Foozlebang calculator -->
 			2.5, <!-- Metronome -->
 			2.7, <!-- While loop and wait to reduce CPU usage --><br>&nbsp;
 			3.3, <!-- FS of square wave --> 
